--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,22 +1,23 @@
-* {
-    box-sizing: border-box;
-}
 .layout {
-    height: 100vh;
-    background-color: #fff;
-    color: #000;
-    display: flex;
-    flex-direction: column;
+  height: 100vh;
+  background-color: #fff;
+  color: #000;
+  display: flex;
+  flex-direction: column;
 }
-.layout__header, .layout__footer, .layout__content {
-    padding: 0 8px;
-    flex: 1 0 auto;
-}
-.layout__content {
-    overflow-y: scroll;
-    flex: 0 1 100vh;
-}
+
 .layout__header, .layout__footer {
-    display: flex;
-    align-items: center;
+  padding: 0 8px;
+  flex: 1 0 auto;
+}
+
+.layout__content {
+  padding: 0 8px;
+  overflow-y: scroll;
+  flex: 0 1 100vh;
+}
+
+.layout__header, .layout__footer {
+  display: flex;
+  align-items: stretch;
 }
