--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,14 +1,14 @@
 .contact {
   display: flex;
   align-items: center;
-  padding-right: 10px; 
+  padding-right: 10px;
+  position: relative; 
 }
 
 .contact__content {
   margin-left: 10px;
   display: inline-block;
   width: 100%;
-  height: 100%;
 }
 
 .content__header {
@@ -44,15 +44,18 @@
 
 .contact_large {
   height: 62px;
-  margin-top: 8px;
+  margin-top: 7px;
+  padding-top: 6px;  
 }
 .contact_medium {
   height: 60px;
-  margin-top: 7px;
+  margin-top: 6px;
+  padding-top: 5px;
 }
 .contact_small {
   height: 40px;
-  margin-top: 4px;
+  margin-top: 5px;
+  padding-top: 4px;
 }
 
 .contact_small .content__name {
