--- a/src/components/Contacts/Contacts.css
+++ b/src/components/Contacts/Contacts.css
@@ -1,3 +1,21 @@
-.contact + .contact .contact__content {
-  border-top: 1px solid  #C9C8CD;
+.contact + .contact:before {
+  content: '';
+  background-color:#C9C8CD;
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  top: 0px;
+  margin-left: 60px;
+}
+
+.contact + .contact_large:before {
+  margin-left: 62px;
+}
+
+.contact + .contact_medium:before {
+  margin-left: 60px;
+}
+
+.contact + .contact_small:before {
+  margin-left: 40px;
 }
