--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,21 +1,32 @@
-.header-inner {
+.header {
   display: flex;
   width: 100%;
 }
 
-.header-inner--sm {
+.header_sm {
   height: 43px;
 }
 
-.header-inner--lg {
+.header_lg {
   height: 49px;
 }
 
-.header-left, .header-right {
+.header__left, .header__right {
   flex: 0 0 72px;
 }
 
-.header-center {
+.header__left {
+  flex-grow: 1;
+}
+
+.header__right {
+  padding: 0 7px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.header__center {
   flex: 1 1 100%;
   display: flex;
   flex-direction: column;
@@ -25,7 +36,7 @@
   text-align: center;
 }
 
-.header-center__top, .header-center__bottom {
+.header__center-top, .header__center-bottom {
   height: 1.3em;
   white-space: nowrap;
   width: 100%;
@@ -33,23 +44,12 @@
   text-overflow: ellipsis;
 }
 
-.header-center__top {
+.header__center-top {
   font-size: 17px;
   line-height: 1.3;
 }
 
-.header-center__bottom {
+.header__center-bottom {
   font-size: 13px;
   color: #787878;
-}
-
-.header-left {
-  flex-grow: 1;
-}
-
-.header-right {
-  padding: 0 7px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
 }
