--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,11 +4,11 @@
 }
 
 .header_sm {
-  height: 43px;
+  height: 2.6875rem;
 }
 
 .header_lg {
-  height: 49px;
+  height: 3.0625rem
 }
 
 .header__left, .header__right {
@@ -17,10 +17,12 @@
 
 .header__left {
   flex-grow: 1;
+  display: flex;
+  align-items: center;
 }
 
 .header__right {
-  padding: 0 7px;
+  padding: 0 .4375rem;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -36,20 +38,3 @@
   text-align: center;
 }
 
-.header__center-top, .header__center-bottom {
-  height: 1.3em;
-  white-space: nowrap;
-  width: 100%;
-  overflow-x: hidden;
-  text-overflow: ellipsis;
-}
-
-.header__center-top {
-  font-size: 17px;
-  line-height: 1.3;
-}
-
-.header__center-bottom {
-  font-size: 13px;
-  color: #787878;
-}
