--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -16,8 +16,10 @@
 }
 
 .layout__content {
+  width: 100%;
   padding: 0 8px;
-  overflow-y: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
   flex: 0 1 100vh;
 }
 
