fixup! Added search input

--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -22,6 +22,12 @@
   height: 40px;
 }
 
+.avatar_xsmall {
+  flex: 0 0 37px;
+  width: 37px;
+  height: 37px;
+}
+
 .avatar__img {
   width: 100%;
   height: 100%;
