--- a/src/components/HeaderTitle/HeaderTitle.css
+++ b/src/components/HeaderTitle/HeaderTitle.css
@@ -7,11 +7,11 @@
 }
 
 .header-title {
-  font-size: 1.0625rem;
+  font-size: 17px;
   line-height: 1.3;
 }
 
 .header-subtitle {
-  font-size: .8125rem;
+  font-size: 13px;
   color: #787878;
 }
