1) Checked status on contact avatat 2) Incoming message count.

--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -2,34 +2,54 @@
   display: inline-block;
   overflow: hidden;   
   border-radius: 100%;  
+  position: relative;
 }
 
 .avatar_large {
   flex: 0 0 62px;  
   width: 62px;
   height: 62px;
+  line-height: 62px;
 }
 
 .avatar_medium {
   flex: 0 0 60px;  
   width: 60px;
   height: 60px;
+  line-height: 60px;
 }
 
 .avatar_small {
   flex: 0 0 40px;  
   width: 40px;
   height: 40px;
+  line-height: 40px;
 }
 
 .avatar_xsmall {
   flex: 0 0 37px;
   width: 37px;
   height: 37px;
+  line-height: 37px;
 }
 
 .avatar__img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.avatar_checked::before {
+  content: '\2713';
+  color: white;
+  font-size: 30px;
+  vertical-align: middle;
+  text-align: center;
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.6;
+
 }
