--- a/src/components/InputBar/styles.css
+++ b/src/components/InputBar/styles.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   padding: 5px 0;
+  margin: 5px 0 15px;
   background-color: #f9f9fa;
   box-shadow: 0 -0.5px #b1b2b7;
 }
@@ -9,7 +10,7 @@
 .input-bar__input {
   flex-grow: 1;
   margin: 5px;
-  padding: 15px;
+  padding: 5px 15px;
   font-size: 1.1rem;
   font-weight: 400;
   border: 1px solid #d9dcdf;
