--- a/src/components/Contacts/Contacts.css
+++ b/src/components/Contacts/Contacts.css
@@ -7,6 +7,17 @@
   width: calc(100% - 60px);
 }
 
+.contact a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  text-decoration: none;
+  color: inherit;
+}
+
 .contact + .contact_large:before {
   margin-left: 70px;
 }
