--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -42,19 +42,11 @@
   color: white;
   font-weight: bold;
   margin-right: 3px;
-  width: 20px;
-  height: 20px;
-  line-height: 20px;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
   vertical-align: middle;
-}
-.content__counter_onedigit {
-  padding: 3px 8px;
-}
-.content__counter_twodigit {
-  padding: 3px 4px;
-}
-.content__counter_threedigit {
-  padding: 3px 4px;
+  font-size: 12px;
 }
 
 .content__text {
