--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -24,27 +24,26 @@
 }
 
 .content__header {
-  padding-top: 7px;
   display: flex;
   justify-content: space-between;
   font-size: 16px;  
 }
 
 .content__body {
+  padding-top: 7px;  
   display: flex;
   justify-content: space-between;
 }
 
 .content__counter {
-  background: #8E8E93;
-  border-radius: 100%;
+  background: royalblue;
+  border-radius: 12px;
   text-align: center;
   color: white;
   font-weight: bold;
-  margin-right: 3px;
-  width: 25px;
-  height: 25px;
-  line-height: 25px;
+  padding: 5px 8px;
+  height: 24px;
+  min-width: 24px;  
   vertical-align: middle;
   font-size: 12px;
 }
@@ -67,7 +66,7 @@
 .content__time {
   display: inline-block;  
   color: #8E8E93;
-  flex: 0 0 55px;
+  min-width: 55px;
 }
 
 .content__icon {
