Some styling/lint fixes.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,10 +8,11 @@
 }
 
 .header_lg {
-  height: 49px
+  height: 49px;
 }
 
-.header__left, .header__right {
+.header__left,
+.header__right {
   flex: 0 0 72px;
 }
 
