--- a/src/components/HeaderBtn/HeaderBtn.css
+++ b/src/components/HeaderBtn/HeaderBtn.css
@@ -4,7 +4,7 @@
   font-size: 17px;
 }
 
-.headerBtn::focus {
+.headerBtn:focus {
   outline: none;
   text-shadow: 0 0 2px rgba(64, 64, 64, 0.12);
 }
