--- a/src/components/Message/message.css
+++ b/src/components/Message/message.css
@@ -1,33 +1,26 @@
 .message-wrapper {
   display: flex;
-
   padding: 0 56px 6px 6px;
 }
 
 .message-wrapper_my {
   flex-direction: row-reverse;
-
   padding: 0 6px 6px 56px;
 }
 
 .message {
   position: relative;
-
   display: inline-block;
-
   box-sizing: border-box;
   min-width: 100px;
   padding: 6px 12px 18px;
-
   text-align: left;
   letter-spacing: -0.45px;
-
-  color: #000000;
+  color: #000;
   border: 1px solid #c3cede;
   border-radius: 16px;
   border-bottom-left-radius: 0;
-  background-color: #ffffff;
-
+  background-color: #fff;
   font-size: 17px;
   line-height: 22px;
 }
@@ -39,34 +32,30 @@
   background-color: #e1ffc7;
 }
 
-.message_my .message__status {
-  display: block;
-}
-
-.message_my .message__time {
-  right: 20px;
-
-  color: #19c700;
+.message__time {
+  right: 10px;
+  color: #555;
 }
 
 .message__status,
 .message__time {
   position: absolute;
   bottom: 3px;
-
   height: 10px;
-
   font-size: 10px;
   line-height: 10px;
 }
 
-.message__time {
-  right: 10px;
-
-  color: #555;
+.message_my .message__status {
+  display: block;
 }
 
-.icon {
+.message_my .message__time {
+  right: 20px;
+  color: #19c700;
+}
+
+.message .icon {
   position: relative;
   right: -3px;
 }
