--- a/src/components/SectionTitle/SectionTitle.css
+++ b/src/components/SectionTitle/SectionTitle.css
@@ -1,11 +1,10 @@
 .section-title {
   height: 28px;
-  margin: 0 -8px;
   padding: 6.5px 10px;
   font-size: 12px;
   letter-spacing: 1px;
   line-height: 15px;
   text-transform: uppercase;
-  color: #8D8D8E;
+  color: #8d8d8e;
   background-color: #ededed;
 }
