--- a/src/components/Icon/Icon.css
+++ b/src/components/Icon/Icon.css
@@ -5,47 +5,53 @@
   background-size: cover;
 }
 
-.icon__message-sent, .icon__message-read {
+.icon_message-sent, .icon_message-read {
   color: #19c700;
   width: 14px;
   height: 14px;
 } 
 
-.icon__message-sent {
+.icon_message-sent {
   background-image: url(./img/sent.svg);
 }
 
-.icon__message-read {
+.icon_message-read {
   background-image: url(./img/read.svg);
 }
 
-.icon__header-add {
+.icon_header-add {
   width: 20px;
   height: 20px;
   background-image: url(./img/plus.svg);
 }
 
-.icon__header-write {
+.icon_header-write {
   width: 20px;
   height: 20px;
   background-image: url(./img/write.svg);
   margin-bottom: 5px;
 }
 
-.icon__footer-chats {
+.icon_footer-chats {
   width: 30px;
   height: 26px;
   background-image: url(./img/chats.svg);
 }
 
-.icon__footer-contacts {
+.icon_footer-contacts {
   width: 26px;
   height: 26px;
   background-image: url(./img/contacts.svg);
 }
 
-.icon__footer-settings {
+.icon_footer-settings {
   width: 26px;
   height: 26px;
   background-image: url(./img/settings.svg);
+}
+
+.icon_header-back {
+  width: 21px;
+  height: 21px;
+  background-image: url(./img/back.svg);
 }
