--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -5,11 +5,13 @@
   position: relative;
 }
 
+
 .avatar_large {
   flex: 0 0 62px;  
   width: 62px;
   height: 62px;
   line-height: 62px;
+  font: 40px;
 }
 
 .avatar_medium {
@@ -31,6 +33,13 @@
   width: 37px;
   height: 37px;
   line-height: 37px;
+}
+
+.avatar__default {
+  text-align: center;
+  vertical-align: middle;
+  color: white;
+  font-weight: bold;
 }
 
 .avatar__img {
