--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -11,7 +11,7 @@
   width: 62px;
   height: 62px;
   line-height: 62px;
-  font: 40px;
+  font-size: 35px;
 }
 
 .avatar_medium {
@@ -19,6 +19,7 @@
   width: 60px;
   height: 60px;
   line-height: 60px;
+  font-size: 35px;
 }
 
 .avatar_small {
@@ -26,6 +27,8 @@
   width: 40px;
   height: 40px;
   line-height: 40px;
+  font-size: 15px;
+  
 }
 
 .avatar_xsmall {
@@ -33,6 +36,7 @@
   width: 37px;
   height: 37px;
   line-height: 37px;
+  font-size: 15px;
 }
 
 .avatar__default {
