--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
-.footer{
-  background-color: #F8F8F8;
+.footer {
+  background-color: #f8f8f8;
   opacity: 0.82;
   height: 50px;
   display: flex;
