--- a/src/components/FooterBtn/FooterBtn.css
+++ b/src/components/FooterBtn/FooterBtn.css
@@ -3,17 +3,17 @@
 }
 
 .footer-btn__description {
-  color: #007AFF;
-  font-size: 10px;  
+  color: #007aff;
+  font-size: 10px;
   padding: 0;
   margin: 0;
 }
 
-.footer-btn_passive{
+.footer-btn_passive {
   filter: grayscale(100%);
   text-align: center;
 }
 
-.footer-btn{
+.footer-btn {
   text-align: center;
 }
