Style inputs for profile edit

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,5 +1,7 @@
 .btn {
-  background-color: royalblue;
+  min-width: 120px;
+  background-color: #007aff;
+  font-size: 1.1rem;
   color: #fff;
   padding: 10px 15px;
   border: none;
