--- a/src/components/InputGroup/InputGroup.css
+++ b/src/components/InputGroup/InputGroup.css
@@ -7,7 +7,26 @@
   display: block;
   width: 100%;
   max-width: 500px;
+  margin-top: 3px;
   padding: 6px;
   font: inherit;
-  margin-top: 3px;
+  font-size: 1.1rem;
+  font-weight: 400;
+  border: 1px solid #d9dcdf;
+}
+
+.input-wrapper__input_file {
+  display: none;
+}
+
+.input-wrapper_file {
+  color: #007aff;
+  font-size: 1.1rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.input-wrapper__input:focus,
+.input-wrapper__input:active {
+  outline: 1px solid #007aff;
 }
