--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,5 +1,8 @@
+html, body, #root {
+  height: 100%;
+}
 .layout {
-  height: 100vh;
+  height: 100%;
   background-color: #fff;
   color: #000;
   display: flex;
@@ -27,7 +30,7 @@
   padding: 0 8px;
   overflow-y: auto;
   overflow-x: hidden;
-  flex: 0 1 100vh;
+  flex: 0 1 100%;
 }
 
 .layout__content a,
